Updating platform.io to build all machines

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ src_dir = Marlin
 build_dir = Marlin_Build
 
 # Comment this out to build all environments. Or alternatively rename to the desired environment
-env_default = R2_DUAL
+# env_default = R2_DUAL
 
 
 [env:R2]
