--- a/platformio.ini
+++ b/platformio.ini
@@ -5,88 +5,49 @@
 # http://docs.platformio.org/en/latest/projectconf.html
 #
 
-#
-# By default platformio build will abort after 5 errors.
-# Remove '-fmax-errors=5' from build_flags below to see all.
-#
+# A sign `#` at the beginning of the line indicates a comment
+# Comment lines are ignored.
 
 # Automatic targets - enable auto-uploading
 # targets = upload
 
 [platformio]
 src_dir = Marlin
-envs_dir = .pioenvs
-lib_dir = .piolib
-libdeps_dir = .piolibdeps
-env_default = megaatmega2560
+build_dir = Marlin_Build
 
-[common]
-lib_deps =
-  U8glib@1.19.1
-  TMC2130Stepper
-  Adafruit NeoPixel
-  https://github.com/lincomatic/LiquidTWI2.git
-  https://github.com/trinamic/TMC26XStepper.git
-build_flags = -I $BUILDSRC_DIR -fmax-errors=5
+# Comment this out to build all environments. Or alternatively rename to the desired environment
+# env_default = R2_DUAL
 
-[env:megaatmega2560]
+
+[env:R2]
 platform = atmelavr
 framework = arduino
 board = megaatmega2560
-build_flags = ${common.build_flags}
 board_f_cpu = 16000000L
-lib_deps = ${common.lib_deps}
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_R2
+    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.0_alpha"
+    -D ROBO_MODEL="R2"
+extra_scripts = extra_script.py
 
-[env:megaatmega1280]
+[env:R2_DUAL]
 platform = atmelavr
 framework = arduino
-board = megaatmega1280
-build_flags = ${common.build_flags}
+board = megaatmega2560
 board_f_cpu = 16000000L
-lib_deps = ${common.lib_deps}
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_R2_DUAL
+    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.0_alpha"
+    -D ROBO_MODEL="R2_DUAL"
+extra_scripts = extra_script.py
 
-[env:printrboard]
-platform = teensy
-framework = arduino
-board = teensy20pp
-build_flags = ${common.build_flags} -D MOTHERBOARD=BOARD_PRINTRBOARD
-# Bug in arduino framework does not allow boards running at 20Mhz
-#board_f_cpu = 20000000L
-lib_deps = ${common.lib_deps}
-
-[env:printrboard_revf]
-platform = teensy
-framework = arduino
-board = teensy20pp
-build_flags = ${common.build_flags} -D MOTHERBOARD=BOARD_PRINTRBOARD_REVF
-lib_deps = ${common.lib_deps}
-
-[env:brainwavepro]
-platform = teensy
-framework = arduino
-board = teensy20pp
-build_flags = ${common.build_flags} -D MOTHERBOARD=BOARD_BRAINWAVE_PRO
-lib_deps = ${common.lib_deps}
-
-[env:rambo]
+[env:C2]
 platform = atmelavr
 framework = arduino
-board = reprap_rambo
-build_flags = ${common.build_flags}
+board = megaatmega2560
 board_f_cpu = 16000000L
-lib_deps = ${common.lib_deps}
-
-[env:anet10]
-platform = atmelavr
-framework = arduino
-board = sanguino_atmega1284p
-build_flags = ${common.build_flags}
-upload_speed = 57600
-lib_deps = ${common.lib_deps}
-
-[env:sanguino_atmega644p]
-platform = atmelavr
-framework = arduino
-board = sanguino_atmega644p
-build_flags = ${common.build_flags}
-lib_deps = ${common.lib_deps}
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_C2
+    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.0_alpha"
+    -D ROBO_MODEL="C2"
+extra_scripts = extra_script.py
