--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ src_dir     = Marlin
 build_dir   = .pioenvs
 lib_dir     = .piolib
 libdeps_dir = .piolibdeps
-env_default = megaatmega2560
+env_default = R2
 
 [common]
 build_flags = -fmax-errors=5
@@ -48,126 +48,40 @@ lib_deps =
 
 #
 # ATmega2560
-#
-[env:megaatmega2560]
-platform          = atmelavr
-framework         = arduino
-board             = megaatmega2560
-build_flags       = ${common.build_flags}
-board_build.f_cpu = 16000000L
-lib_deps          = ${common.lib_deps}
+
+[env:R2]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
+board_f_cpu = 16000000L
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_R2
+    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.2_alpha"
+    -D ROBO_MODEL="R2"
+extra_scripts = extra_script.py
 monitor_speed     = 250000
 
-#
-# ATmega1280
-#
-[env:megaatmega1280]
-platform          = atmelavr
-framework         = arduino
-board             = megaatmega1280
-build_flags       = ${common.build_flags}
-board_build.f_cpu = 16000000L
-lib_deps          = ${common.lib_deps}
+
+[env:R2_DUAL]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
+board_f_cpu = 16000000L
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_R2_DUAL
+    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.2_alpha"
+    -D ROBO_MODEL="R2_DUAL"
+extra_scripts = extra_script.py
 monitor_speed     = 250000
 
-#
-# AT90USB1286 boards using CDC bootloader
-# - BRAINWAVE
-# - BRAINWAVE_PRO
-# - SAV_MKI
-# - TEENSYLU
-#
-[env:at90USB1286_CDC]
-platform      = teensy
-framework     = arduino
-board         = at90USB1286
-build_flags   = ${common.build_flags}
-lib_deps      = ${common.lib_deps}
-lib_ldf_mode  = deep+
-extra_scripts = pre:buildroot/share/atom/create_custom_upload_command_CDC.py
-
-#
-# AT90USB1286 boards using DFU bootloader
-# - PrintrBoard
-# - PrintrBoard Rev.F
-# - ? 5DPRINT ?
-#
-[env:at90USB1286_DFU]
-platform      = teensy
-framework     = arduino
-board         = at90USB1286
-build_flags   = ${common.build_flags}
-lib_deps      = ${common.lib_deps}
-lib_ldf_mode  = deep+
-extra_scripts = pre:buildroot/share/atom/create_custom_upload_command_DFU.py
-
-#
-# Melzi and clones (ATmega1284p)
-#
-[env:melzi]
-platform      = atmelavr
-framework     = arduino
-board         = sanguino_atmega1284p
-build_flags   = ${common.build_flags}
-upload_speed  = 57600
-lib_deps      = ${common.lib_deps}
-monitor_speed = 250000
-
-#
-# Melzi and clones (Optiboot bootloader)
-#
-[env:melzi_optiboot]
-platform      = atmelavr
-framework     = arduino
-board         = sanguino_atmega1284p
-build_flags   = ${common.build_flags}
-upload_speed  = 115200
-lib_deps      = ${common.lib_deps}
-monitor_speed = 250000
-
-#
-# RAMBo
-#
-[env:rambo]
-platform          = atmelavr
-framework         = arduino
-board             = reprap_rambo
-build_flags       = ${common.build_flags}
-board_build.f_cpu = 16000000L
-lib_deps          = ${common.lib_deps}
-monitor_speed     = 250000
-
-#
-# Sanguinololu (ATmega644p)
-#
-[env:sanguino_atmega644p]
-platform      = atmelavr
-framework     = arduino
-board         = sanguino_atmega644p
-build_flags   = ${common.build_flags}
-lib_deps      = ${common.lib_deps}
-monitor_speed = 250000
-
-#
-# Sanguinololu (ATmega1284p)
-#
-[env:sanguino_atmega1284p]
-platform      = atmelavr
-framework     = arduino
-board         = sanguino_atmega1284p
-build_flags   = ${common.build_flags}
-lib_deps      = ${common.lib_deps}
-monitor_speed = 250000
-
-#
-# Teensy++ 2.0
-#
-[env:teensy20]
-platform          = teensy
-framework         = arduino
-board             = teensy20pp
-build_flags       = ${common.build_flags}
-#board_build.f_cpu = 20000000L     ; Bug in Arduino framework disallows boards running at 20Mhz
-lib_deps          = ${common.lib_deps}
-lib_ldf_mode      = deep+
+[env:C2]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
+board_f_cpu = 16000000L
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_C2
+    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.2_alpha"
+    -D ROBO_MODEL="C2"
+extra_scripts = extra_script.py
 monitor_speed     = 250000
