--- a/platformio.ini
+++ b/platformio.ini
@@ -17,10 +17,8 @@
 
 [platformio]
 src_dir     = Marlin
-build_dir   = .pioenvs
-lib_dir     = .piolib
-libdeps_dir = .piolibdeps
-env_default = R2
+build_dir   = Marlin_Build
+# env_default = R2
 
 [common]
 build_flags = -fmax-errors=5
@@ -56,7 +54,7 @@ board = megaatmega2560
 board_f_cpu = 16000000L
 build_flags =
     -D ROBO_BOARD_VERSION=BOARD_VERSION_R2
-    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.2_alpha"
+    -D ROBO_VERSION="Marlin_1.1.9_RoboVersion_1.3.3_alpha"
     -D ROBO_MODEL="R2"
 extra_scripts = extra_script.py
 
@@ -68,7 +66,7 @@ board = megaatmega2560
 board_f_cpu = 16000000L
 build_flags =
     -D ROBO_BOARD_VERSION=BOARD_VERSION_R2_DUAL
-    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.2_alpha"
+    -D ROBO_VERSION="Marlin_1.1.9_RoboVersion_1.3.3_alpha"
     -D ROBO_MODEL="R2_DUAL"
 extra_scripts = extra_script.py
 
@@ -79,6 +77,6 @@ board = megaatmega2560
 board_f_cpu = 16000000L
 build_flags =
     -D ROBO_BOARD_VERSION=BOARD_VERSION_C2
-    -D ROBO_VERSION="Marlin_1.1.8_RoboVersion_1.3.2_alpha"
+    -D ROBO_VERSION="Marlin_1.1.9_RoboVersion_1.3.3_alpha"
     -D ROBO_MODEL="C2"
 extra_scripts = extra_script.py
