Adding R2 E3D V6 build variant to platformio, plus hex files

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,17 @@ build_flags =
     -D ROBO_MODEL="R2"
 extra_scripts = extra_script.py
 
+[env:R2_E3DV6]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
+board_f_cpu = 16000000L
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_R2
+    -D ROBO_VERSION="Marlin_1.1.6_RoboVersion_1.2.5"
+    -D ROBO_MODEL="R2_E3DV6"
+extra_scripts = extra_script.py
+
 [env:R2_DUAL]
 platform = atmelavr
 framework = arduino
