adding RBV definitions for E3D hotend on R2, HEX files from PIO build

--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,13 @@ tags
 *.app
 *.i*86
 *.x86_64
-*.hex
+
+# PIO Build files
+longcmd*
+*.url
+firmware.hex
+*.dblite
+*.hash
 
 # Debug files
 *.dSYM/
