--- a/platformio.ini
+++ b/platformio.ini
@@ -1,51 +1,23 @@
 #
-# Marlin Firmware
-# PlatformIO Configuration File
+# Project Configuration File
 #
-# For detailed documentation with EXAMPLES:
-#
+# A detailed documentation with the EXAMPLES is located here:
 # http://docs.platformio.org/en/latest/projectconf.html
 #
+
+# A sign `#` at the beginning of the line indicates a comment
+# Comment lines are ignored.
 
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-#
-# By default platformio build will abort after 5 errors.
-# Remove '-fmax-errors=5' from build_flags below to see all.
-#
-
 [platformio]
-src_dir     = Marlin
-build_dir   = Marlin_Build
+src_dir = Marlin
+build_dir = Marlin_Build
+
+# Comment this out to build all environments. Or alternatively rename to the desired environment
 # env_default = R2
 
-[common]
-build_flags = -fmax-errors=5
-  -g
-  -ggdb
-lib_deps =
-  https://github.com/MarlinFirmware/U8glib-HAL/archive/dev.zip
-  LiquidCrystal_I2C@1.1.2
-  TMC2130Stepper
-  https://github.com/teemuatlut/TMC2208Stepper/archive/v0.1.1.zip
-  Adafruit NeoPixel@1.1.3
-  https://github.com/lincomatic/LiquidTWI2/archive/30aa480.zip
-  https://github.com/ameyer/Arduino-L6470/archive/master.zip
-  https://github.com/trinamic/TMC26XStepper/archive/c1921b4.zip
-
-#################################
-#                               #
-#   Unique Core Architectures   #
-#                               #
-#  Add a new "env" below if no  #
-# entry has values suitable to  #
-#   build for a given board.    #
-#                               #
-#################################
-
-#
-# ATmega2560
 
 [env:R2]
 platform = atmelavr
@@ -54,10 +26,20 @@ board = megaatmega2560
 board_f_cpu = 16000000L
 build_flags =
     -D ROBO_BOARD_VERSION=BOARD_VERSION_R2
-    -D ROBO_VERSION="Marlin_1.1.9_RoboVersion_1.3.3_alpha"
+    -D ROBO_VERSION="Marlin_1.1.6_RoboVersion_1.2.5"
     -D ROBO_MODEL="R2"
 extra_scripts = extra_script.py
 
+[env:R2_E3DV6]
+platform = atmelavr
+framework = arduino
+board = megaatmega2560
+board_f_cpu = 16000000L
+build_flags =
+    -D ROBO_BOARD_VERSION=BOARD_VERSION_R2
+    -D ROBO_VERSION="Marlin_1.1.6_RoboVersion_1.2.5"
+    -D ROBO_MODEL="R2_E3DV6"
+extra_scripts = extra_script.py
 
 [env:R2_DUAL]
 platform = atmelavr
@@ -66,7 +48,7 @@ board = megaatmega2560
 board_f_cpu = 16000000L
 build_flags =
     -D ROBO_BOARD_VERSION=BOARD_VERSION_R2_DUAL
-    -D ROBO_VERSION="Marlin_1.1.9_RoboVersion_1.3.3_alpha"
+    -D ROBO_VERSION="Marlin_1.1.6_RoboVersion_1.2.5"
     -D ROBO_MODEL="R2_DUAL"
 extra_scripts = extra_script.py
 
@@ -77,6 +59,6 @@ board = megaatmega2560
 board_f_cpu = 16000000L
 build_flags =
     -D ROBO_BOARD_VERSION=BOARD_VERSION_C2
-    -D ROBO_VERSION="Marlin_1.1.9_RoboVersion_1.3.3_alpha"
+    -D ROBO_VERSION="Marlin_1.1.6_RoboVersion_1.2.5"
     -D ROBO_MODEL="C2"
 extra_scripts = extra_script.py
