Commented robo changes. thermal protection updates, probing improvement
## Changelog
- Commented Robo config changes from vanilla Marlin settings
- Dual hotend offset updated for R2 extruder
- Max temp decreased to 285 for warranty purposes (read comments)
- Added probe delay for ABL probing accuracy
- Filament diameter updated
- Thermal protection updated for v1 beds and fan full speed at layer 0
- Speeding up home bump divisor for Z
- Host communication and buffer changes

-

--- a/.gitignore
+++ b/.gitignore
@@ -141,9 +141,11 @@ CMakeListsPrivate.txt
 cmake-build-*
 
 #platformio
-Marlin_Build/
+/Marlin/Marlin_Build/
 .pioenvs
 .piolibdeps
 platformio.sublime*
 .clang_complete
 .gcc-flags.json
+.structure.hash
+.dblite
