Added slight adjustments to the config

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,6 +39,7 @@ build_flags =
     -D ROBO_BOARD_VERSION=BOARD_VERSION_R2
     -D ROBO_VERSION="Marlin_1.1.9_RoboVersion_1.3.3"
     -D ROBO_MODEL="R2_E3DV6"
+    -D E3D_HOTEND=1
 extra_scripts = extra_script.py
 
 [env:R2_DUAL]
