--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - export DISPLAY=:1.0
   # install python and platformio
   - sudo apt-get update && sudo apt-get install python python-pip
-  - pip install -U platformio
+  - sudo pip install -U platformio
   #
 install:
   #
